[package]
name = "aoc2018"
version = "0.1.0"
authors = ["Tang King Fai <xosdy.t@gmail.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.2.2"
aoc-runner-derive = "0.2.2"
bytecount = "0.4.0"
chrono = "0.4.6"
regex = "1.1.0"
rayon = "1.0.3"
nalgebra = "0.16.13"
lazy_static = "1.2.0"
strum = "0.13.0"
strum_macros = "0.13.0"
num-derive = "0.2.3"
num-traits = "0.2.6"
