[package]
name = "aoc2018"
version = "0.1.0"
authors = ["Tang King Fai <xosdy.t@gmail.com>"]
edition = "2018"

[dependencies]
aoc-runner = "0.3.0"
aoc-runner-derive = "0.3.0"
bytecount = "0.6.3"
chrono = "0.4.19"
regex = "1.5.6"
nalgebra = "0.31.0"
lazy_static = "1.4.0"
strum = "0.24.0"
strum_macros = "0.24.0"
num-derive = "0.3.3"
num-traits = "0.2.15"
